--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -13,37 +13,40 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/config": "^8.1.1",
+    "@expo/metro-config": "^0.10.0",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "@realm/react": "^0.6.2",
-    "expo": "~49.0.18",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^50.0.0",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "realm": "^12.5.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest": "^29.3.1",
+    "jest-expo": "^50.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "overrides": {
     "react-refresh": "~0.14.0"
