--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "realm": "^12.5.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
