--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-navigation/native": "^6.0.2",
     "@realm/react": "^0.6.2",
     "expo": "^50.0.0",
@@ -36,6 +37,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.6",
     "realm": "^12.5.0",
     "yup": "^1.3.3"
